newtype-tools/tests/trybuild/newtype/union.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/newtype/union.rs:2:1
  |
2 | union U {
  | ^^^^^
