newtype-tools/tests/trybuild/newtype/union.rs
#[derive(newtype_tools::Newtype)]
union U {
    u: u32,
}

fn main() {}
